--- a/productos/templates/lista_productos.html
+++ b/productos/templates/lista_productos.html
@@ -4,13 +4,18 @@
 
 {% block content %}
 <h2 class="mt-4 mb-4">Listado de Productos</h2>
-
+<div class="mb-3 text-end">
+    <a href="{% url 'crear_producto' %}" class="btn btn-success">
+        <i class="bi bi-plus-circle"></i> Crear nuevo producto
+    </a>
+</div>
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>Nombre</th>
             <th>Descripcion</th>
             <th>Precio</th>
+            <th>Categoria</th>
             <th>Acciones</th>
         </tr>
     </thead>
@@ -20,18 +25,22 @@
             <td>{{ producto.nombre }}</td>
             <td>{{ producto.descripcion }}</td>
             <td>{{ producto.precio }}</td>
+            <td>{{ producto.categoria }}</td>
             <td>
-                <a href="#" class="btn btn-warning">Editar</a>
-                <a href="#" class="btn btn-danger">Eliminar</a>
-                <a href="#" class="btn btn-primary">Detalle</a>
+                <a href="{% url 'crear_producto' %}" class="btn btn-warning">Editar</a>
+                <a href="{% url 'eliminar_producto' %}" class="btn btn-danger">Eliminar</a>
+                <a href="{% url 'ver_producto' %}" class="btn btn-primary">Detalle</a>
             </td>
         </tr>
         {% empty %}
         <tr>
-            <td class="text-center" colspan="4">No hay productos registradas</td>
+            <td class="text-center" colspan="4">Todavia hay productos registrados</td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
+<div class="mt-4">
+    <a href="{% url 'index' %}" class="btn btn-secondary">Volver al inicio</a>
+</div>
 
 {% endblock %}
