--- a/productos/templates/form_categoria.html
+++ b/productos/templates/form_categoria.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Crear Categoria{% endblock %}
+{% block title %}{{ titulo }}{% endblock %}
 
 {% block content %}
-<h2 class="mt-4 mb-4">{% if form.instance.pk %}Editar{% else %}Agregar{% endif %}Categoria</h2>
+<h2 class="mt-4 mb-4">{{ titulo }}</h2>
 
 <form method="post">
     {% csrf_token %}
