--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-info">
         <div class="container-fluid">
             <a class="navbar-brand" >Mi Tienda</a>
@@ -18,8 +17,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_productos' %}">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Categorías</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Etiquetas</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_categorias' %}">Categorías</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_etiquetas' %}">Etiquetas</a></li>
                 </ul>
             </div>
         </div>
