--- a/productos/templates/lista_etiquetas.html
+++ b/productos/templates/lista_etiquetas.html
@@ -18,7 +18,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for etiqueta in etiquetas %}
+        {% for etiqueta in page_obj %}
         <tr>
             <td>{{ etiqueta.id }}</td>
             <td>{{ etiqueta.nombre }}</td>
@@ -34,6 +34,27 @@
         {% endfor %}
     </tbody>
 </table>
+<nav aria-label="Paginación">
+      <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled"><span class="page-link">Anterior</span></li>
+        {% endif %}
+
+        <li class="page-item active"><span class="page-link">{{ page_obj.number }}</span></li>
+
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled"><span class="page-link">Siguiente</span></li>
+        {% endif %}
+      </ul>
+    </nav>
 <div class="mt-3 d-flex justify-content-start">
     <a href="{% url 'index' %}" class="btn btn-outline-primary">
         <i class="bi bi-house-door"></i> Volver al inicio
