--- a/productos/templates/lista_productos.html
+++ b/productos/templates/lista_productos.html
@@ -9,7 +9,7 @@
         <i class="bi bi-plus-circle"></i> Crear nuevo producto
     </a>
 </div>
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered align-middle">
     <thead>
         <tr>
             <th>Nombre</th>
@@ -20,7 +20,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for producto in productos %}
+        {% for producto in page_obj %}
         <tr>
             <td>{{ producto.nombre }}</td>
             <td>{{ producto.descripcion }}</td>
@@ -39,6 +39,27 @@
         {% endfor %}
     </tbody>
 </table>
+<nav aria-label="Paginación">
+      <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled"><span class="page-link">Anterior</span></li>
+        {% endif %}
+
+        <li class="page-item active"><span class="page-link">{{ page_obj.number }}</span></li>
+
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled"><span class="page-link">Siguiente</span></li>
+        {% endif %}
+      </ul>
+    </nav>
 <div class="mt-4">
     <a href="{% url 'index' %}" class="btn btn-secondary">Volver al inicio</a>
 </div>
