para complementar portafolio se agrego app clientes para usuarios que compren productos

--- a/productos/templates/eliminar_producto.html
+++ b/productos/templates/eliminar_producto.html
@@ -8,6 +8,7 @@
     <div class="card-body">
         <h5 class="card-title">{{ producto.nombre }}</h5>
         <p class="card-text">{{ producto.descripcion }}</p>
+        <p class="card-text">{{ producto.cantidad }}</p>
         <p><strong>Precio:</strong> ${{ producto.precio }}</p>
         <p><strong>Categoría:</strong> {{ producto.categoria }}</p>
     </div>
