--- a/productos/templates/ver_producto.html
+++ b/productos/templates/ver_producto.html
@@ -9,6 +9,9 @@
         <h5 class="card-title">Descripción</h5>
         <p class="card-text">{{ producto.descripcion }}</p>
 
+        <h5 class="card-title">Cantidad</h5>
+        <p class="card-text">${{ producto.cantidad }}</p>
+
         <h5 class="card-title">Precio</h5>
         <p class="card-text">${{ producto.precio }}</p>
 
