--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -19,7 +19,7 @@
                 {{ form.password.errors }}
             </div>
             <button type="submit" class="btn btn-primary">Entrar</button>
-            <a href="{% url 'register' %}" class="btn btn-link">¿No tienes cuenta? Regístrate</a>
+            <a href="{% url 'registro' %}" class="btn btn-link">¿No tienes cuenta? Regístrate</a>
         </form>
     </div>
 </div>
