--- a/productos/templates/crear_producto.html
+++ b/productos/templates/crear_producto.html
@@ -1,12 +1,24 @@
 {% extends 'base.html' %}
-{% block title %}Crear Producto{% endblock %}
+{% block title %}
+    {% if producto and producto.id %}
+        Editar Producto
+    {% else %}
+        Crear Producto
+    {% endif %}
+{% endblock %}
 
 {% block content %}
-<h2 class="mt-4 mb-4">Crear nuevo producto</h2>
+  <div class="container mt-4">
+    <h2 class="mb-4">
+        {% if producto and producto.id %}
+            Editar producto: {{ producto.nombre }}
+        {% else %}
+            Crear nuevo producto
+        {% endif %}
+    </h2>
 
 <form method="post">
     {% csrf_token %}
-
     <div class="mb-3">
         {{ producto_form.nombre.label_tag }}
         {{ producto_form.nombre }}
@@ -16,6 +28,11 @@
         {{ producto_form.descripcion.label_tag }}
         {{ producto_form.descripcion }}
         {{ producto_form.descripcion.errors }}
+    </div>
+    <div class="mb-3">
+        {{ producto_form.cantidad.label_tag }}
+        {{ producto_form.cantidad }}
+        {{ producto_form.cantidad.errors }}
     </div>
     <div class="mb-3">
         {{ producto_form.precio.label_tag }}
