--- a/productos/templates/lista_productos.html
+++ b/productos/templates/lista_productos.html
@@ -14,6 +14,7 @@
         <tr>
             <th>Nombre</th>
             <th>Descripcion</th>
+            <th>Cantidad</th>
             <th>Precio</th>
             <th>Categoria</th>
             <th>Acciones</th>
@@ -24,6 +25,7 @@
         <tr>
             <td>{{ producto.nombre }}</td>
             <td>{{ producto.descripcion }}</td>
+            <td>{{ producto.cantidad }}</td>
             <td>{{ producto.precio }}</td>
             <td>{{ producto.categoria }}</td>
             <td>
