--- a/templates/base.html
+++ b/templates/base.html
@@ -8,42 +8,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'index' %}">Mi Tienda</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_productos' %}">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_categorias' %}">Categorías</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_etiquetas' %}">Etiquetas</a></li>
-                </ul>
-                <ul class="navbar-nav ms-auto">
-                    {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <span class="nav-link text-white">Hola, {{ user.username }}</span>
-                        </li>
-                        <li class="nav-item">
-                            <form method="post" action="{% url 'logout' %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-link nav-link text-white">Cerrar sesión</button>
-                            </form>
-                        </li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'index' %}">Mi Tienda</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                {% if user.is_authenticated %}
+                    {% if user.is_staff %}
+                        <!-- Menú para administradores o staff (crud de productos,etiquetas y categorias)-->
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_productos' %}">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_categorias' %}">Categorías</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'lista_etiquetas' %}">Etiquetas</a></li>
                     {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'login' %}">Iniciar sesión</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'register' %}">Registrarse</a>
-                        </li>
+                        <!-- Menú para usuarios que van a hacer compras(ordenes)-->
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'ordenes:lista_productos_clientes' %}">Productos disponibles</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'ordenes:lista_ordenes' %}">Mis órdenes</a></li>
                     {% endif %}
-                </ul>
-            </div>
+                {% endif %}
+            </ul>
+            <ul class="navbar-nav ms-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <span class="nav-link text-white">Hola, {{ user.username }}</span>
+                    </li>
+                    <li class="nav-item">
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-link nav-link text-white">Cerrar sesión</button>
+                        </form>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'login' %}">Iniciar sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'registro' %}">Registrarse</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Contenido principal -->
     <main class="container my-4">
